[package]
name = "hello"
version = "0.1.0"
authors = ["lin pingchuan <paul_lin@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader="0.6.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

